--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_deploy:
 deploy:
   skip_cleanup: true
   provider: s3
+  region: us-east-1
   bucket: com.is-quarantine-over-yet
   access_key_id: AKIA2CQO232KFPL3GIMO
   secret_access_key:
